# HueLang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md  build.py  debug.sh  premake5.lua
docs/: language.md
docs/examples/: fizzbuzz.hue  idea.hue
huelang/: CMakeLists.txt  interpreter.h  logo.h  main.cpp
huemodule.std/: CMakeLists.txt  std.cpp  std.h  typeddefinition.cpp  typeddefinition.h
implementation/: .gitignore  build.sh  debug.sh  huelang.cabal  package.yaml  premake5.lua  stack.yaml
implementation/app/: Main.hs
implementation/huelang/: .gitignore  build.sh  vg.sh
implementation/huelang/src/: crudestream.c  interpreter.c  logo.c  main.c  modules.c  repl.c  tokenize.c
implementation/huemodule.std/: build.sh
implementation/huemodule.std/src/: list.c  numbers.c  secondary.c  std.c  typeannotations.c  wordlist.c
implementation/libhuelang/: ChangeLog.md  README.md  build.sh  libhuelang.cabal  package.yaml  stack.yaml
implementation/libhuelang/src/: core.c  definition.c  environment.c  tokenize.c  type.c  utils.c  values.c  word.c
lhuelang/: CMakeLists.txt  core.cpp  definition.h  environment.h  value.h  word.h
src/: core.c  dictionary.c  doublylinked.c  environment.c  interpreter.c  linked.c  main.c  stack.c  tokenize.c  typeparsing.c
src/huelang/: interpreter.cpp  interpreter.h  main.cpp
src/huemodule.std/: std.cpp  std.h  typeddefinition.h
src/libhuelang/: core.cpp  core.h  definition.cpp  definition.h  environment.cpp  environment.h  value.h  word.cpp  word.h
src/vocabularies/: arithmetic.c  flow.c  io.c
(+16 files in other folders)
